--- a/products.html
+++ b/products.html
@@ -74,8 +74,8 @@
     </div>
     <div class="products-col">
         <img src="./images/universe.jpg" alt="universe image">
-        <h5>Zdroj: <a href="https://wallpapercave.com/" target="_blank" rel="noopener"
-                      class="odkaz">wallpapercave.com</a></h5>
+        <h3>Zdroj: <a href="https://wallpapercave.com/" target="_blank" rel="noopener"
+                      class="odkaz">wallpapercave.com</a></h3>
     </div>
 </section>
 <hr class="line">
@@ -140,32 +140,32 @@
             <th colspan="2" scope="col">5.B</th>
         </tr>
         <tr>
-            <th scope="col">Muži</th>
-            <th scope="col">Ženy</th>
-            <th scope="col">Muži</th>
-            <th scope="col">Ženy</th>
+            <th scope="col" id="male-a-header">Muži</th>
+            <th scope="col" id="female-a-header">Ženy</th>
+            <th scope="col" id="male-b-header">Muži</th>
+            <th scope="col" id="female-b-header">Ženy</th>
         </tr>
         </thead>
         <tbody>
         <tr>
             <th rowspan="2" scope="row">Jídlo</th>
-            <td headers="org-header">Ano</td>
-            <td headers="org-header">Ne</td>
+            <td headers="org-header male-a-header">Ano</td>
+            <td headers="org-header female-a-header">Ne</td>
             <td rowspan="2">Ano</td>
-            <td headers="org-header">Ano</td>
-            <td headers="org-header">Neznámé</td>
+            <td headers="org-header male-b-header">Ano</td>
+            <td headers="org-header female-b-header">Neznámé</td>
         </tr>
         <tr>
-            <td colspan="2" headers="org-header">Pouze vegetariánské</td>
-            <td colspan="2" headers="org-header">Dvojité porce</td>
+            <td colspan="2" headers="org-header male-a-header female-a-header">Pouze vegetariánské</td>
+            <td colspan="2" headers="org-header male-b-header female-b-header">Dvojité porce</td>
         </tr>
         <tr>
             <th scope="row">Ubytování</th>
-            <td headers="org-header">Ano</td>
-            <td headers="org-header">Ano</td>
-            <td headers="org-header">Ne</td>
-            <td headers="org-header">Ne</td>
-            <td headers="org-header">Ne</td>
+            <td headers="org-header male-a-header">Ano</td>
+            <td headers="org-header female-a-header">Ano</td>
+            <td headers="org-header male-b-header">Ne</td>
+            <td headers="org-header female-b-header">Ne</td>
+            <td headers="org-header female-b-header">Ne</td>
         </tr>
         </tbody>
     </table>
