--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,7 @@
 </section>
 <hr class="line">
 <section class="zapati">
-    <h3>O nás</h3>
+    <h3>Odkazy</h3>
     <p><a href="https://html5.validator.nu/?doc=https%3A%2F%2Fasuchardaa.github.io%2Fcontact.html" target="_blank" rel="noopener" class="odkaz2">ODKAZ NA
         VALIDACI HTML</a> & <a href="#" target="_blank" rel="noopener" class="odkaz2">ODKAZ NA AUDIT WCAG</a>
     </p>
