--- a/products.html
+++ b/products.html
@@ -131,24 +131,24 @@
 <section class="tabulka">
     <h4>Tabulka</h4>
     <table>
-        <caption>Seznam účastníků</caption>
+        <caption aria-hidden="true">Seznam účastníků</caption>
         <thead>
         <tr>
-            <th id="org-header" rowspan="2" scope="row">Organizace Účastníků</th>
-            <th scope="col" colspan="2">5.A</th>
-            <th scope="row" rowspan="2">Učitelé</th>
-            <th scope="col" colspan="2">5.B</th>
+            <th rowspan="2" id="org-header" scope="row">Organizace Účastníků</th>
+            <th colspan="2" scope="col">5.A</th>
+            <th rowspan="2" scope="row">Učitelé</th>
+            <th colspan="2" scope="col">5.B</th>
         </tr>
         <tr>
-            <th id="male-a-header" scope="col">Muži</th>
-            <th id="female-a-header" scope="col">Ženy</th>
-            <th id="male-b-header" scope="col">Muži</th>
-            <th id="female-b-header" scope="col">Ženy</th>
+            <th scope="col" id="male-a-header">Muži</th>
+            <th scope="col" id="female-a-header">Ženy</th>
+            <th scope="col" id="male-b-header">Muži</th>
+            <th scope="col" id="female-b-header">Ženy</th>
         </tr>
         </thead>
         <tbody>
         <tr>
-            <th scope="row" rowspan="2">Jídlo</th>
+            <th rowspan="2" scope="row">Jídlo</th>
             <td headers="org-header male-a-header">Ano</td>
             <td headers="org-header female-a-header">Ne</td>
             <td rowspan="2">Ano</td>
@@ -156,15 +156,16 @@
             <td headers="org-header female-b-header">Neznámé</td>
         </tr>
         <tr>
-            <td headers="org-header male-a-header female-a-header" colspan="2">Pouze vegetariánské</td>
-            <td headers="org-header male-b-header female-b-header" colspan="2">Dvojité porce</td>
+            <td colspan="2" headers="org-header male-a-header female-a-header">Pouze vegetariánské</td>
+            <td colspan="2" headers="org-header male-b-header female-b-header">Dvojité porce</td>
         </tr>
         <tr>
             <th scope="row">Ubytování</th>
             <td headers="org-header male-a-header">Ano</td>
             <td headers="org-header female-a-header">Ano</td>
             <td headers="org-header male-b-header">Ne</td>
-            <td headers="org-header female-b-header" colspan="2">Ne</td>
+            <td headers="org-header female-b-header">Ne</td>
+            <td headers="org-header female-b-header">Ne</td>
         </tr>
         </tbody>
     </table>
