--- a/products.html
+++ b/products.html
@@ -128,7 +128,7 @@
     </div>
 </section>
 <hr class="line">
-<section class="tabulka">
+<section aria-hidden="true" class="tabulka">
     <h4>Tabulka</h4>
     <table>
         <caption aria-hidden="true">Seznam účastníků</caption>
