--- a/products.html
+++ b/products.html
@@ -128,10 +128,10 @@
     </div>
 </section>
 <hr class="line">
-<section aria-hidden="true" class="tabulka">
+<section class="tabulka" aria-hidden="true">
     <h4>Tabulka</h4>
-    <table>
-        <caption aria-hidden="true">Seznam účastníků</caption>
+    <table aria-hidden="true">
+        <caption>Seznam účastníků</caption>
         <thead>
         <tr>
             <th rowspan="2" id="org-header" scope="row">Organizace Účastníků</th>
