--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <p>
         <a href="http://jigsaw.w3.org/css-validator/validator?lang=cs&profile=css3svg&uri=https%3A%2F%2Fasuchardaa.github.io%2F&usermedium=all&vextwarning=&warning=1"
            target="_blank" rel="noopener" class="odkaz2">ODKAZ NA VALIDACI CSS</a> & <a href="https://html5.validator.nu/?doc=https%3A%2F%2Fasuchardaa.github.io%2Findex.html" target="_blank" rel="noopener" class="odkaz2">ODKAZ NA
-        VALIDACI HTML</a> & <a href="#" target="_blank" rel="noopener" class="odkaz2">ODKAZ NA AUDIT WCAG</a></p>
+        VALIDACI HTML</a> & <a href="https://wave.webaim.org/report#/https://asuchardaa.github.io/index.html" target="_blank" rel="noopener" class="odkaz2">ODKAZ NA AUDIT WCAG</a></p>
     <div class="ikony">
         <a href="https://www.facebook.com/Adaamekk/" class="fa fa-facebook" aria-label="Facebook"></a>
         <a href="https://www.instagram.com/adam.sucharda/" class="fa fa-instagram" aria-label="Instagram"></a>
