--- a/404.html
+++ b/404.html
@@ -47,8 +47,7 @@
     </div>
     <h1>Oops! Error 404</h1>
 </section>
-<section class="error-container"></section>
-<hr class="line">
+<hr style="padding-top: 300px;" class="line">
 <section class="zapati">
     <h3>Odkazy</h3>
     <div class="ikony">
