--- a/401.html
+++ b/401.html
@@ -1,12 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8"/>
+    <meta charset="UTF-8">
     <title>TWS SP - 401</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap"
+          rel="stylesheet">
+    <script src="https://kit.fontawesome.com/53c596c8c0.js" crossorigin="anonymous"></script>
 </head>
 <body>
-<div id="error-wrapper">
-    <p>401</p>
-</div>
+<section class="sub-header">
+    <div class="navbar">
+        <div class="logo"><a href="index.html">TWS SP</a></div>
+        <ul class="links">
+            <li><a href="index.html">DOMŮ</a></li>
+            <li><a href="gallery.html">GALERIE</a></li>
+            <li><a href="products.html">PRODUKTY</a></li>
+            <li><a href="contact.html">KONTAKT</a></li>
+        </ul>
+        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" rel="noopener" class="action_btn">Kouzelné
+            tlačítko</a>
+        <div class="toggle_btn">
+            <span class="fa-solid fa-bars"></span>
+        </div>
+    </div>
+    <div class="drop-menu">
+        <ul>
+            <li>
+                <a href="index.html">DOMŮ</a>
+            </li>
+            <li>
+                <a href="gallery.html">GALERIE</a>
+            </li>
+            <li>
+                <a href="products.html">PRODUKTY</a>
+            </li>
+            <li>
+                <a href="contact.html">KONTAKT</a>
+            </li>
+            <li>
+                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" rel="noopener" class="action_btn">Kouzelné
+                    tlačítko</a>
+            </li>
+        </ul>
+    </div>
+    <h1>Oops! Error 401</h1>
+</section>
+<hr style="padding-top: 300px;" class="line">
+<section class="zapati">
+    <h3>Odkazy</h3>
+    <div class="ikony">
+        <a href="https://www.facebook.com/Adaamekk/" class="fa fa-facebook" aria-label="Facebook"></a>
+        <a href="https://www.instagram.com/adam.sucharda/" class="fa fa-instagram" aria-label="Instagram"></a>
+        <a href="https://twitter.com/Adam_Sucharda" class="fa fa-twitter" aria-label="Twitter"></a>
+        <a href="https://github.com/asuchardaa" class="fa-brands fa-github" aria-label="Github"></a>
+        <a href="https://open.spotify.com/user/21g355ayvqjnkl7lgkx3t6o4a" class="fa fa-spotify"
+           aria-label="Spotify"></a>
+    </div>
+    <p>© 2023 Adam Sucharda</p>
+</section>
+<script src="./js/drop_menu.js"></script>
 </body>
 </html>
